[tool.poetry]
name = "cipher_yh3395"
version = "0.1.0"
description = "see below - we are adding the cipher function"
authors = ["YangYangHu"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
